# masked-discrete-language-model

./: .gitignore  WORKFLOW.md  pyproject.toml
configs/: default.yaml  tiny.yaml
scripts/: sample.sh  train.sh
src/: chat.py  diffusion.py  model.py  noise.py  sample.py  tokenizer.py  train.py
